--- a/rideShareService/rideService/templates/rideService/request_update.html
+++ b/rideShareService/rideService/templates/rideService/request_update.html
@@ -1,7 +1,7 @@
-{% extends "rideService/base_generic.html" %}
+{% extends "rideService/homeBase.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-    <div class="content-section">
+    <div class="content-section" style="margin-right: 20%;margin-left: 20%;">
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
