create request detail view

--- a/rideShareService/rideService/templates/rideService/role.html
+++ b/rideShareService/rideService/templates/rideService/role.html
@@ -4,9 +4,8 @@
     <div class="d-flex mb-3">
         <div class="p-2 flex-fill bg-info">
             <h3>Become A Owner!</h3><hr>
-                <li><a href="{% url 'owner-all-requests'%}">Routes</a></li>
                 <li><a href="{% url 'request-create'%}">Request A New Ride</a></li>
-                <li><a href='#'>Another Link 3</a></li>
+                <li><a href="{% url 'owner-all-requests'%}">My Rides</a></li>
         </div>
         <div class="p-2 flex-fill bg-warning">
             <h3>Become A Sharer!</h3><hr>
