--- a/rideShareService/rideService/templates/rideService/role.html
+++ b/rideShareService/rideService/templates/rideService/role.html
@@ -1,26 +1,34 @@
 {% extends "rideService/homeBase.html" %}
 {% block content %}
-<div class="container mt-3">
+<div class="container mt-3" style="padding-top: 5%;">
     <div class="d-flex mb-3">
-        <div class="p-2 flex-fill bg-info">
-            <h3>Become A Owner!</h3><hr>
-                <li><a href="{% url 'request-create'%}">Request A New Ride</a></li>
-                <li><a href="{% url 'owner-all-requests'%}">My Rides</a></li>
+        <div class="p-2 flex-fill bg-info" style="height: 500px">
+            <img src="../../static/css/owner.png" style="height: 180px; padding-top: 20px;" class="center">
+            <br/>
+            <h3 style="text-align: center; font-weight: bold;">Become An Owner!</h3><hr style="padding-bottom: 20px;">
+            <h5 style="padding-bottom: 10px;"><a class="my-link" href="{% url 'request-create'%}"> > Request A New Ride</a></h5>
+            <h5 style="padding-bottom: 10px;"><a class="my-link" href="{% url 'owner-all-requests'%}"> > My Rides</a></h5>  
         </div>
+        <div class="p-5"></div>
         <div class="p-2 flex-fill bg-warning">
-            <h3>Become A Sharer!</h3><hr>
-                <li><a href='#'>Another Link 1</a></li>
-                <li><a href='#'>Another Link 2</a></li>
+            <img src="../../static/css/sharer.png" style="height: 180px; padding-top: 20px;" class="center">
+            <br/>
+            <h3 style="text-align: center; font-weight: bold;">Become A Sharer!</h3><hr style="padding-bottom: 20px;">
+                <h5 style="padding-bottom: 10px;"><a class="my-link" href="{% url 'sharer-search'%}"> > Ride Search</a></h5>
+                <h5 style="padding-bottom: 10px;"><a class="my-link" href="{% url 'sharer-detail'%}"> > Ongoing Rides</a></h5>
                 <li><a href='#'>Another Link 3</a></li>
         </div>
+        <div class="p-5"></div>
         <div class="p-2 flex-fill bg-danger">
-            <h3>Become A Driver!</h3><hr>
+            <img src="../../static/css/driver.png" style="height: 180px; padding-top: 20px;" class="center">
+            <br/>
+            <h3 style="text-align: center; font-weight: bold;">Become A Driver!</h3><hr style="padding-bottom: 20px;">
             {% if isDriver %}
-                <li><a href="{% url 'driver-requests'%}">Open Ride Requests</a></li>
+                <h5 style="padding-bottom: 10px;"><a class="my-link" href="{% url 'driver-confirmed-requests'%}"> > My Confirmed Requests</a></h5>
+                <h5 style="padding-bottom: 10px;"><a class="my-link" href="{% url 'driver-requests'%}"> > Find a New Request</a></h5>
             {% else %}
-                <li><a href="{% url 'driver-create'%}">Become A Driver</a></li>
-            {% endif%}
-            
+                <h5 style="padding-bottom: 10px;"><a class="my-link" href="{% url 'driver-create'%}"> > Become A Driver</a></h5>
+            {% endif%}  
         </div>
 </div>
 {% endblock content %}
