--- a/rideShareService/rideService/static/css/styles.css
+++ b/rideShareService/rideService/static/css/styles.css
@@ -1,13 +1,41 @@
 body {
-  background-image: url("uber.png");
+  background-image: url("background.jpeg");
+  background-size: 100% auto;
   background-color:#000000;
   color: #333333;
   margin-top: 5rem;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #000000;
-  text-align: justify;
+	font-weight: normal;
+	color: #252525;
+	letter-spacing: 0.5px;
+  font-family: 'Montserrat', sans-serif;
+}
+h1 {
+	font-size: 42px;
+}
+h2 {
+	font-size: 36px;
+}
+h3 {
+	font-size: 30px;
+}
+h4 {
+	font-size: 24px;
+}
+h5 {
+	font-size: 20px;
+}
+h6 {
+	font-size: 16px;
+	font-weight: bold;
+}
+p {
+	font-weight: 400;
+	color: #6f6f6f;
+	line-height: 24px;
+	text-rendering: optimizeLegibility;
 }
 
 .div-text {
@@ -112,4 +140,19 @@ a.article-title:hover {
 	letter-spacing: 1px;
 	position: relative;
 	z-index: 1;
+}
+
+.center {
+  display: block; 
+  margin-left: auto; 
+  margin-right: auto;
+}
+
+.my-link {
+  margin-left: 10px;
+  margin-bottom: 10px;
+  font-weight: bold;
+	color: #252525;
+	letter-spacing: 0.4px;
+  font-family: 'Montserrat', sans-serif;
 }
