--- a/rideShareService/rideService/templates/rideService/base_generic.html
+++ b/rideShareService/rideService/templates/rideService/base_generic.html
@@ -7,21 +7,24 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <!-- Add additional CSS in static file -->
   {% load static %}
-  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+  <link rel="stylesheet" href="../../static/css/styles.css">
 </head>
 <body>
     <div class = 'container-fluid'>
         <div class="row">
-                <div class="col-md-6" style="padding-top: 100px; padding-left: 50px;">
-                    <div class = "div-text">
-                        Get a ride in minutes. <br>
-                        Or become a driver and earn money on your schedule. <br>
-                        Xber finds you better ways to move, work, and succeed.</div>
+                <div class="col-md-6" style="padding-top: 100px; padding-left: 80px;">
+                    <h2 style="color: #1cd1aa; font-size: 80px;font-weight: bold">Welcome To Xber!</h2>
+                    <div style="color: #ffffff; font-size: 40px; font-weight: bold">
+                        YOUR BEST WAT TO<br/> 
+                        MOVE<br/>
+                        WORK<br/>
+                        AND<br/>
+                        SUCCEED</div>
                     {% if user.is_authenticated %}
                     <a href="{% url 'logout' %}">Logout</a>
                     {% endif %}
                 </div>
-                <div class = "col-md-5">
+                <div class = "col-md-5" style="padding-top: 110px;">
                     {% if messages %}
                     {% for message in messages %}
                     <div class="alert alert-{{ message.tags }}">
