--- a/rideShareService/rideService/templates/rideService/sharer_allrequests.html
+++ b/rideShareService/rideService/templates/rideService/sharer_allrequests.html
@@ -20,6 +20,6 @@
         </article>
     {% endfor %}
 {% else %}
-    <h2>No Availiable Rides.</h2>
+<p style="margin-top:10%; font-size:30px; color:#ffffff;text-align:center;">No Such Ride avaliable Right Now<a style="position:relative;left:20px;" class="btn btn-secondary btn-sm mt-1 mb-1" href="{%url 'sharer-search'%}">Search Another one here!</a>></p>>
 {% endif %}
 {% endblock content %}
