--- a/rideShareService/rideService/templates/rideService/sharer_request_detail.html
+++ b/rideShareService/rideService/templates/rideService/sharer_request_detail.html
@@ -20,6 +20,6 @@
         </article>
     {% endfor %}
 {% else %}
-    <h2>You Don't Have Any Ongoing Rides.</h2>
+<p style="margin-top:10%; font-size:30px; color:#ffffff;text-align:center;">No On-going ride Right Now, Look for a ride Share?<a style="position:relative;left:20px;" class="btn btn-secondary btn-sm mt-1 mb-1" href="{%url 'sharer-search'%}">Search Here!</a>></p>>
 {% endif %}
 {% endblock content %}
